tests/ui/consts/const_in_pattern/issue-78057.stderr
error: to use a constant of type `Opaque` in a pattern, `Opaque` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/issue-78057.rs:12:9
   |
LL |         FOO => {},
   |         ^^^

error: unreachable pattern
  --> $DIR/issue-78057.rs:14:9
   |
LL |         FOO => {},
   |         --- this pattern is irrefutable; subsequent arms are never executed
LL |
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/issue-78057.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

